# prometeuspbx

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  asterisk.env.example  docker-compose.yaml  docker-entrypoint.sh  manage.py  prometeuspbx.env.example  prometeuspbx.yaml.example  pyproject.toml  requirements.txt
.github/workflows/: deploy-production.yaml
PrometeusPBX/: asgi.py  defaults.py  helpers.py  routing.py  settings.py  urls.py  wsgi.py
conf/asterisk/: cdr_pgsql.conf  extconfig.conf  extensions.conf  extensions.lua  minivm.conf  modules.conf  pjsip.conf  pjsip_notify.conf  pjsip_wizard.conf  res_pgsql.conf  sip_test.conf  sorcery.conf
core/: apps.py  context_processors.py  db_routes.py  models.py  permissions.py  storages.py  views.py
core/management/: __init__.py
core/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_permission_group.py  0004_alter_user_groups_alter_user_user_permissions.py  0005_permission_app_label.py
docker/: docker-compose.yaml
docker/db/: create-db.sh
docker/prometeuspbx/: Dockerfile  docker-entrypoint.sh
docker/prometeuspbx_asterisk/: Dockerfile  docker-entrypoint.sh
pbx/: apps.py  db_routes.py  forms.py  models.py  models_sip.py  permissions.py  sip_choices.py  ui.py  views.py
pbx/migrations/: 0001_initial.py  0002_extension_user.py  0003_context_sipaor_sipauth_sipendpoint_extension_context.py  0004_alter_context_name.py  (+20 more)
pjsip/: apps.py  choices.py  models.py
ui/: consumers.py  forms.py  menu.py  models.py  routing.py  ui.py  urls.py  views.py  widgets.py
(+70 files in other folders)
